# gstd-bridge

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  bridge.toml  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/bridge/: mod.rs  vault.rs
src/chains/: mod.rs  solana.rs  ton.rs  xrpl.rs
src/consensus/: mod.rs  state.rs
src/mpc/: keygen.rs  mod.rs
src/p2p/: discovery.rs  gossip.rs  mod.rs
src/rpc/: mod.rs
